Add missed entry point

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,10 @@ source:
   sha256: 325ae5fe5e0839773677feed59552ec95713230d638fceccbc86803b3169e7c1
 
 build:
-  number: 1
+  number: 2
   script: "{{ PYTHON }} -m pip install . -vv"
+  entry_points:
+    - dvc = dvc.main:main
 
 requirements:
   host:
