--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: e7dc4d400f4e7b8ec4835500859944db009f03d730cb6313e7e92fd0bf0c7ec8
 
 build:
-  number: 0
+  number: 1
   script: "{{ PYTHON }} -m pip install . -vv"
   entry_points:
     - dvc = dvc.main:main
@@ -49,6 +49,12 @@ requirements:
     - networkx >=2.1
     - futures  # [py==27]
     - pathlib2  # [py==27]
+    - google-cloud-storage ==1.13.0
+    - boto3 ==1.9.115
+    - azure-storage-blob ==2.1.0
+    - oss2 ==2.6.1
+    - paramiko >=2.5.0
+    - pyarrow ==0.14.0  # [py>27 or unix]
 
 test:
   imports:
