--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - python
     - ply >=3.9
     - configparser >=3.5.0
-    - zc.lockfile >=1.2.1
+    - zc.lockfile >=1.2.1  # [py==27]
     - future >=0.16.0
     - colorama >=0.3.9
     - configobj >=5.0.6
@@ -56,6 +56,7 @@ requirements:
     - paramiko >=2.5.0
     - pyarrow ==0.14.0  # [py>27 or unix]
     - tqdm >=4.34.0
+    - flufl.lock >=3.2  # [py>27]
 
 test:
   imports:
