--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - build.patch
 
 build:
-  number: 0
+  number: 1
   script: "{{ PYTHON }} -m pip install . -vv"
   entry_points:
     - dvc = dvc.main:main
@@ -33,7 +33,7 @@ requirements:
     - setuptools >=34.0.0
     - nanotime >=0.5.2
     - pyasn1 >=0.4.1
-    - schema >=0.6.7
+    - voluptuous >=0.11.7
     - jsonpath-ng >=1.4.3
     - requests >=2.22.0
     - grandalf ==0.6
