--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - build.patch
 
 build:
-  number: 1
+  number: 2
   script: "{{ PYTHON }} -m pip install . -vv"
   entry_points:
     - dvc = dvc.main:main
@@ -64,6 +64,9 @@ requirements:
 test:
   imports:
     - dvc
+  commands:
+    - dvc version
+    - dvc get https://github.com/iterative/dvc scripts/ci/dvc.ico
 
 about:
   home: https://dvc.org/
