--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -61,6 +61,7 @@ requirements:
     - tqdm >=4.38.0
     - flufl.lock >=3.2  # [py>27]
     - packaging >=19.0
+    - pyyaml >=5.1.2
 
 test:
   imports:
