--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -68,7 +68,7 @@ test:
     - dvc
   commands:
     - dvc version
-    - dvc get https://github.com/iterative/dvc scripts/ci/dvc.ico
+    - dvc get https://github.com/iterative/dvc scripts/innosetup/dvc.ico
 
 about:
   home: https://dvc.org/
