--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - python
     - ply >=3.9
     - configparser >=3.5.0
-    - zc.lockfile >=1.2.1  # [py==27]
+    - zc.lockfile >=1.2.1
     - future >=0.16.0
     - colorama >=0.3.9
     - configobj >=5.0.6
@@ -51,17 +51,14 @@ requirements:
     - win_unicode_console >=0.5  # [win]
     - pywin32 >=225  # [win]
     - networkx >=2.1
-    - futures  # [py==27]
-    - pathlib2  # [py==27]
-    - contextlib2  # [py==27]
     - google-cloud-storage ==1.13.0
     - boto3 ==1.9.115
     - azure-storage-blob ==2.1.0
     - oss2 ==2.6.1
     - paramiko >=2.5.0
-    - pyarrow ==0.14.0  # [py>27 or unix]
+    - pyarrow ==0.14.0
     - tqdm >=4.38.0
-    - flufl.lock >=3.2  # [py>27]
+    - flufl.lock >=3.2
     - packaging >=19.0
     - pyyaml >=5.1.2
 
