--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ requirements:
     - distro >=1.3.0
     - appdirs >=1.4.3
     - treelib >=1.5.5
-    - inflect >=2.1.0
+    - inflect >=2.1.0,<4
     - humanize >=0.5.1
     - ruamel.yaml >=0.16.1
     - funcy >=1.14
