--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - build.patch
 
 build:
-  number: 0
+  number: 2
   script: "{{ PYTHON }} -m pip install . -vv"
   skip: True  # [py<35]
   entry_points:
@@ -24,13 +24,13 @@ requirements:
     - pip
   run:
     - python
+    - python-dateutil <2.8.1,>=2.1
     - ply >=3.9
     - configparser >=3.5.0
-    - zc.lockfile >=1.2.1
-    - future >=0.16.0
     - colorama >=0.3.9
     - configobj >=5.0.6
     - gitpython >=2.1.8
+    - gitdb2 >=2.0.6
     - setuptools >=34.0.0
     - nanotime >=0.5.2
     - pyasn1 >=0.4.1
@@ -38,29 +38,31 @@ requirements:
     - jsonpath-ng >=1.4.3
     - requests >=2.22.0
     - grandalf ==0.6
-    - asciimatics >=1.10.0
     - distro >=1.3.0
     - appdirs >=1.4.3
     - treelib >=1.5.5
     - inflect >=2.1.0,<4
     - humanize >=0.5.1
+    - pyyaml >=5.1.2,<5.2
     - ruamel.yaml >=0.16.1
     - funcy >=1.14
-    - pathspec >=0.5.9
+    - pathspec >=0.6.0
     - shortuuid >=0.5.0
+    - tqdm >=4.40.0,<5
+    - packaging >=19.0
+    - zc.lockfile >=1.2.1
+    - flufl.lock >=3.2
     - win_unicode_console >=0.5  # [win]
     - pywin32 >=225  # [win]
-    - networkx >=2.1
-    - google-cloud-storage ==1.13.0
-    - boto3 ==1.9.115
+    - networkx >=2.1,<2.4
+    - google-cloud-storage ==1.19.0
+    - pydrive ==1.3.1
+    - google-api-python-client >=1.2
+    - boto3 >=1.9.201
     - azure-storage-blob ==2.1.0
     - oss2 ==2.6.1
     - paramiko >=2.5.0
-    - pyarrow ==0.14.0
-    - tqdm >=4.40.0,<5
-    - flufl.lock >=3.2
-    - packaging >=19.0
-    - pyyaml >=5.1.2
+    - pyarrow ==0.15.1
 
 test:
   requires:
