--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -54,7 +54,7 @@ requirements:
     - win_unicode_console >=0.5  # [win]
     - pywin32 >=225  # [win]
     - networkx >=2.1,<2.4
-    - flatten-dict >=0.2.0
+    - flatten_json >=1.6.0
     - texttable >=0.5.2
     - google-cloud-storage ==1.19.0
     - pydrive2 ==1.4.0
