--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,8 +28,8 @@ requirements:
     - ply >=3.9
     - colorama >=0.3.9
     - configobj >=5.0.6
-    - gitpython >=2.1.8
-    - gitdb2 >=2.0.6
+    - gitpython >=2.1.8,<3
+    - gitdb2 >=2.0.6,<3
     - setuptools >=34.0.0
     - nanotime >=0.5.2
     - pyasn1 >=0.4.1
