--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -5,16 +5,16 @@
 jobs:
 - job: osx
   pool:
-    vmImage: macOS-10.14
+    vmImage: macOS-10.13
   timeoutInMinutes: 360
   strategy:
     maxParallel: 8
     matrix:
-      osx_python3.6.____cpython:
-        CONFIG: osx_python3.6.____cpython
+      osx_python3.6:
+        CONFIG: osx_python3.6
         UPLOAD_PACKAGES: True
-      osx_python3.7.____cpython:
-        CONFIG: osx_python3.7.____cpython
+      osx_python3.7:
+        CONFIG: osx_python3.7
         UPLOAD_PACKAGES: True
 
   steps:
