--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,6 +58,7 @@ requirements:
     - flatten_json >=0.1.6
     - texttable >=0.5.2
     - pygtrie ==2.3.2
+    - dpath >=2.0.1,<3
     - google-cloud-storage ==1.19.0
     - pydrive2 ==1.4.5
     - boto3 >=1.9.201
