--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,14 +58,14 @@ requirements:
     - texttable >=0.5.2
     - pygtrie ==2.3.2
     - dpath >=1.4.2
-#    - google-cloud-storage ==1.19.0
-#    - pydrive2 >=1.4.9
-#    - boto3 >=1.9.201
-#    - azure-storage-blob ==2.1.0
-#    - oss2 ==2.6.1
-#    - paramiko >=2.5.0
-#    - pyarrow ==0.15.1  # [py<38]
-#    - pyarrow ==0.16.0  # [py38]
+    - google-cloud-storage ==1.19.0
+    - pydrive2 >=1.4.9
+    - boto3 >=1.9.201
+    - azure-storage-blob ==2.1.0
+    - oss2 ==2.6.1
+    - paramiko >=2.5.0
+    - pyarrow ==0.15.1  # [py<38]
+    - pyarrow ==0.16.0  # [py38]
 
 test:
   requires:
