--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,7 +62,7 @@ requirements:
     - pydrive2 >=1.4.9
     - boto3 >=1.9.201
     - azure-storage-blob ==2.1.0
-    - oss2 ==2.6.1
+    - oss2 >=2.11.0
     - paramiko >=2.5.0
     - pyarrow ==0.17.1
 
