--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,9 +38,6 @@ requirements:
     - grandalf ==0.6
     - distro >=1.3.0
     - appdirs >=1.4.3
-    - treelib >=1.5.5
-    - inflect >=2.1.0,<4
-    - humanize >=0.5.1
     - pyyaml >=5.1.2,<5.4
     - ruamel.yaml >=0.16.1
     - funcy >=1.14
@@ -55,16 +52,17 @@ requirements:
     - networkx >=2.1,<2.4
     - pydot >=1.2.4
     - flatten_json >=0.1.6
-    - texttable >=0.5.2
+    - tabulate >=0.8.7
     - pygtrie ==2.3.2
-    - dpath >=1.4.2
+    - dpath >=2.0.1,<3
+    - shtab >=1.0.2
     - google-cloud-storage ==1.19.0
-    - pydrive2 >=1.4.9
+    - pydrive2 >=1.4.14
     - boto3 >=1.9.201
     - azure-storage-blob ==2.1.0
     - oss2 >=2.11.0
     - paramiko >=2.5.0
-    - pyarrow ==0.17.1
+    - pyarrow >=0.17.1
 
 test:
   requires:
