--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -54,7 +54,7 @@ requirements:
     - flatten_json >=0.1.6
     - tabulate >=0.8.7
     - pygtrie ==2.3.2
-    - dpath >=2.0.1,<3
+    - dpath >=1.4.2
     - shtab >=1.0.2
     - google-cloud-storage ==1.19.0
     - pydrive2 >=1.4.14
