meta: update shtab

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,7 +55,7 @@ requirements:
     - tabulate >=0.8.7
     - pygtrie ==2.3.2
     - dpath >=1.4.2
-    - shtab >=1.0.3
+    - shtab >=1.1.0,<2
     - google-cloud-storage ==1.19.0
     - pydrive2 >=1.4.14
     - boto3 >=1.9.201
