--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,7 +51,7 @@ requirements:
     - pywin32 >=225  # [win]
     - networkx >=2.1,<2.5
     - pydot >=1.2.4
-    - flatten_json >=0.1.6
+    - flatten_json >=0.1.6,<0.1.8
     - tabulate >=0.8.7
     - pygtrie ==2.3.2
     - dpath >=1.4.2
