--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,7 +52,7 @@ requirements:
     - networkx >=2.1,<2.5
     - pydot >=1.2.4
     - dataclasses  # [py<37]
-    - flatten_json >=0.1.6,<0.1.8
+    - flatten_dict >=0.3.0,<1
     - tabulate >=0.8.7
     - pygtrie ==2.3.2
     - dpath >=1.4.2
