--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,7 +64,8 @@ requirements:
     - azure-storage-blob >=12.0
     - knack
     - oss2 >=2.11.0
-    - paramiko >=2.5.0
+    - paramiko >=2.7.0
+    - invoke >=1.3  # for paramiko, see https://github.com/iterative/dvc/issues/4589
     - pyarrow >=0.17.1
 
 test:
