--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,6 +5,33 @@ package:
   name: {{ name|lower }}
   version: {{ version }}
 
+# DVC includes requirements-only extras to enable support for different
+# remotes. Here we build a `dvc` conda package equivalent to the `dvc[all]` pip
+# package, with a `_dvc` base package containing dvc alone. This allows a
+# happy-path of:
+#
+#   `conda install -c conda-forge dvc`
+#
+# supporting dvc and all remotes and a power-user path of:
+#
+#   `conda install -c conda-forge _dvc _dvc-s3`
+#
+# for dvc and specific remotes.
+#
+# Here's how it works...
+#
+# We define extras through "private" subpackages and a single top-level `dvc`
+# metapackage. The metapackage at a given build version references the extras
+# subpackages at the same build version. `_dvc` includes the dvc package itself
+# and core dependencies. `_dvc-gs`, `_dv-s3`, et al contain no code, but
+# reference the `_dvc` base package and the requirements requirements for that extra.
+#
+# Adding a new extra...
+#
+# Each extra needs to be added in two places:
+# 1. Add the extra with a pin_subpackage directive under `requirements.run`.
+# 2. Add the extra under `outputs` specifying the additional runtime requirements.
+
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: 983aa453ae1d8f9319bfc9fbd1d37fd901e9538bfae00cec0b5156ca8c5a64d1
@@ -12,61 +39,21 @@ source:
     - build.patch
 
 build:
-  number: 0
-  script: {{ PYTHON }} -m pip install . -vv
-  skip: true  # [py<36]
-  entry_points:
-    - dvc = dvc.main:main
+  # noarch is not inherited below, and must be specified for every package
+  noarch: python
+  # number is propagated into the outputs below
+  number: 3
 
 requirements:
-  host:
-    - python
-    - pip
   run:
-    - python
-    - ply >=3.9
-    - colorama >=0.3.9
-    - configobj >=5.0.6
-    - gitpython >=2.1.8
-    - gitdb2 >=2.0.6
-    - setuptools >=34.0.0
-    - nanotime >=0.5.2
-    - pyasn1 >=0.4.1
-    - voluptuous >=0.11.7
-    - jsonpath-ng >=1.4.3
-    - requests >=2.22.0
-    - grandalf ==0.6
-    - distro >=1.3.0
-    - appdirs >=1.4.3
-    - ruamel.yaml >=0.16.1
-    - toml >=0.10.1
-    - funcy >=1.14
-    - pathspec >=0.6.0
-    - shortuuid >=0.5.0
-    - tqdm >=4.45.0,<5
-    - packaging >=19.0
-    - zc.lockfile >=1.2.1
-    - flufl.lock >=3.2,<4
-    - win_unicode_console >=0.5  # [win]
-    - pywin32 >=225  # [win]
-    - networkx >=2.1,<2.5
-    - pydot >=1.2.4
-    - dataclasses  # [py<37]
-    - flatten-dict >=0.3.0,<1
-    - tabulate >=0.8.7
-    - pygtrie ==2.3.2
-    - dpath >=1.4.2
-    - shtab >=1.3.2,<2
-    - rich >=3.0.5
-    - google-cloud-storage ==1.19.0
-    - pydrive2 >=1.6.2
-    - boto3 >=1.9.201
-    - azure-storage-blob >=12.0
-    - knack
-    - oss2 >=2.11.0
-    - paramiko >=2.7.0
-    - invoke >=1.3  # for paramiko, see https://github.com/iterative/dvc/issues/4589
-    - pyarrow >=0.17.1
+    - {{ pin_subpackage("_dvc", exact=True) }}
+    - {{ pin_subpackage("_dvc-gs", exact=True) }}
+    - {{ pin_subpackage("_dvc-gdrive", exact=True) }}
+    - {{ pin_subpackage("_dvc-s3", exact=True) }}
+    - {{ pin_subpackage("_dvc-azure", exact=True) }}
+    - {{ pin_subpackage("_dvc-oss", exact=True) }}
+    - {{ pin_subpackage("_dvc-ssh", exact=True) }}
+    - {{ pin_subpackage("_dvc-hdfs", exact=True) }}
 
 test:
   requires:
@@ -75,6 +62,116 @@ test:
     - dvc
   commands:
     - dvc version
+
+outputs:
+  - name: _dvc
+    build:
+      noarch: python
+      entry_points:
+        - dvc = dvc.main:main
+      script:
+        - ${PYTHON} -m pip install . --no-deps -vv
+
+    requirements:
+      host:
+        - python
+        - pip
+      run:
+        - python
+        - ply >=3.9
+        - colorama >=0.3.9
+        - configobj >=5.0.6
+        - gitpython >=2.1.8
+        - gitdb2 >=2.0.6
+        - setuptools >=34.0.0
+        - nanotime >=0.5.2
+        - pyasn1 >=0.4.1
+        - voluptuous >=0.11.7
+        - jsonpath-ng >=1.4.3
+        - requests >=2.22.0
+        - grandalf ==0.6
+        - distro >=1.3.0
+        - appdirs >=1.4.3
+        - ruamel.yaml >=0.16.1
+        - toml >=0.10.1
+        - funcy >=1.14
+        - pathspec >=0.6.0
+        - shortuuid >=0.5.0
+        - tqdm >=4.45.0,<5
+        - packaging >=19.0
+        - zc.lockfile >=1.2.1
+        - flufl.lock >=3.2,<4
+        - win_unicode_console >=0.5  # [win]
+        - pywin32 >=225  # [win]
+        - networkx >=2.1,<2.5
+        - pydot >=1.2.4
+        - dataclasses  # [py<37]
+        - flatten-dict >=0.3.0,<1
+        - tabulate >=0.8.7
+        - pygtrie ==2.3.2
+        - dpath >=1.4.2
+        - shtab >=1.3.2,<2
+        - rich >=3.0.5
+
+  - name: _dvc-gs
+    build:
+      noarch: generic
+    requirements:
+      run:
+        - {{ pin_subpackage("_dvc", exact=True) }}
+        - google-cloud-storage ==1.19.0
+
+  - name: _dvc-gdrive
+    build:
+      noarch: generic
+    requirements:
+      run:
+        - {{ pin_subpackage("_dvc", exact=True) }}
+        - pydrive2 >=1.6.2
+
+  - name: _dvc-s3
+    build:
+      noarch: generic
+    requirements:
+      run:
+        - {{ pin_subpackage("_dvc", exact=True) }}
+        - boto3 >=1.9.201
+
+  - name: _dvc-azure
+    build:
+      noarch: generic
+    requirements:
+      run:
+        - {{ pin_subpackage("_dvc", exact=True) }}
+        - azure-storage-blob >=12.0
+        - knack
+
+  - name: _dvc-oss
+    build:
+      noarch: generic
+    requirements:
+      run:
+        - {{ pin_subpackage("_dvc", exact=True) }}
+        - azure-storage-blob >=12.0
+        - oss2 >=2.11.0
+
+  - name: _dvc-ssh
+    build:
+      noarch: generic
+    requirements:
+      run:
+        - {{ pin_subpackage("_dvc", exact=True) }}
+        - paramiko >=2.7.0
+        # for paramiko, see https://github.com/iterative/dvc/issues/4589
+        - invoke >=1.3
+
+  - name: _dvc-hdfs
+    build:
+      noarch: generic
+    requirements:
+      run:
+        - {{ pin_subpackage("_dvc", exact=True) }}
+        - pyarrow >=0.17.1
 
 about:
   home: https://dvc.org/
