Fix windows build via non-templated python invocation
Modify _dvc build script to invoke `python` rather than `$PYTHON` to
fixup environment variable interpolation.

For, unclear, reasons the {{ PYTHON }} jinja interpolation variable is
not available in the `_dvc` output templating pass.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -71,7 +71,7 @@ outputs:
       entry_points:
         - dvc = dvc.main:main
       script:
-        - ${PYTHON} -m pip install . --no-deps -vv
+        - python -m pip install . --no-deps -vv
 
     requirements:
       host:
