--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -98,6 +98,7 @@ outputs:
         - colorama >=0.3.9
         - configobj >=5.0.6
         - gitpython >=2.1.8
+        - dulwich >=0.20.11
         - gitdb2 >=2.0.6
         - setuptools >=34.0.0
         - nanotime >=0.5.2
