--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -129,6 +129,8 @@ outputs:
         - dpath >=1.4.2
         - shtab >=1.3.2,<2
         - rich >=3.0.5
+        - pyparsing ==2.4.7
+        - typing_extensions >=3.7.4
 
   - name: dvc-gs
     requirements:
