--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -120,7 +120,7 @@ outputs:
         - flufl.lock >=3.2,<4
         - win_unicode_console >=0.5  # [win]
         - pywin32 >=225  # [win]
-        - networkx >=2.1,<2.5
+        - networkx >=2.1
         - pydot >=1.2.4
         - dataclasses  # [py<37]
         - flatten-dict >=0.3.0,<1
