--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   patches:
     - build.patch
 
-# The "true" build is specified in the dvc-base output below.
+# The "true" build is specified in the dvc output below.
 # Of the build properties here and below:
 # number is propagated into the outputs below
 build:
@@ -28,50 +28,8 @@ test:
     - dvc version
     - 'dvc version | grep "Supports: azure, gdrive, gs, hdfs, http, https, s3, ssh, oss"'
 
-# DVC includes requirements-only extras to enable support for different
-# remotes. Here we build a `dvc` conda package equivalent to the `dvc[all]` pip
-# package, with a `dvc` base package containing dvc alone. This allows a
-# happy-path of:
-#
-#   `conda install -c conda-forge dvc`
-#
-# supporting dvc and all remotes and a power-user path of:
-#
-#   `conda install -c conda-forge dvc-base dvc-s3`
-#
-# for dvc and specific remotes.
-#
-# Here's how it works...
-#
-# We define extras through "private" subpackages and a single top-level `dvc`
-# metapackage. The metapackage at a given build version references the extras
-# subpackages at the same build version. `dvc-base` includes the dvc package itself
-# and core dependencies. `dvc-gs`, `dvc-s3`, et al contain no code, but
-# reference the `dvc` base package and the requirements for that extra.
-#
-# Adding a new extra...
-#
-# Each extra needs to be added in two places:
-# 1. Under a new output specifying the additional runtime requirements
-# 2. Under outputs->dvc->requirements.run with a pin_subpackage directive, to
-#    include it in the `dvc` metapackage
 outputs:
   - name: dvc
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
-        - {{ pin_subpackage("dvc-gs", exact=True) }}
-        - {{ pin_subpackage("dvc-gdrive", exact=True) }}
-        - {{ pin_subpackage("dvc-s3", exact=True) }}
-        - {{ pin_subpackage("dvc-azure", exact=True) }}
-        - {{ pin_subpackage("dvc-oss", exact=True) }}
-        - {{ pin_subpackage("dvc-ssh", exact=True) }}
-        - {{ pin_subpackage("dvc-hdfs", exact=True) }}
-
-  - name: dvc-base
     build:
       entry_points:
         - dvc = dvc.main:main
@@ -139,7 +97,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - gcsfs >=0.7.2
 
   - name: dvc-gdrive
@@ -148,7 +106,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - pydrive2 >=1.6.3
 
   - name: dvc-s3
@@ -157,7 +115,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - boto3 >=1.9.201
 
   - name: dvc-azure
@@ -166,7 +124,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - adlfs >=0.6.3
         - azure-identity >=1.4.0
         - knack
@@ -177,7 +135,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - oss2 >=2.11.0
 
   - name: dvc-ssh
@@ -186,7 +144,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - paramiko >=2.7.0
         # for paramiko, see https://github.com/iterative/dvc/issues/4589
         - invoke >=1.3
@@ -197,7 +155,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - pyarrow >=0.17.1
 
   - name: dvc-webhdfs
@@ -206,7 +164,7 @@ outputs:
         - python
       run:
         - python
-        - {{ pin_subpackage("dvc-base", exact=True) }}
+        - {{ pin_subpackage("dvc", exact=True) }}
         - python-hdfs >=2.5.7
 
 about:
