--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ source:
 # Of the build properties here and below:
 # number is propagated into the outputs below
 build:
+  noarch: python
   number: 0
   skip: true  # [py<36]
 
