meta: skip for <=3.6 and win

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
 # number is propagated into the outputs below
 build:
   number: 0
-  skip: true  # [py<36]
+  skip: true  # [py<=36 and win]
 
 outputs:
   - name: dvc
