Temporarily add missing upstream dependency

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -215,6 +215,7 @@ outputs:
       requires:
         - git
         - pip
+        - importlib-metadata  # Undeclared upstream dependency
       imports:
         - dvc
       commands:
