try importlib-metadata

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -74,7 +74,7 @@ outputs:
         - pydot >=1.2.4
         - speedcopy >=2.0.1  # [py<38 and win]
         - dataclasses ==0.7  # [py<37]
-        - importlib_metadata >=1.4  # [py<38]
+        - importlib-metadata >=1.4  # [py<38]
         - flatten-dict >=0.4.1,<1
         - tabulate >=0.8.7
         - pygtrie >=2.3.2
