meta: only build dvc package

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -86,183 +86,9 @@ outputs:
         - dvc-render ==0.0.9
         - dvclive >=0.10.0
         - dvc-data ==0.1.15
+        - dvc-http ==0.0.2
         - dvc-task ==0.1.2
         - hydra-core >=1.1.0
-  - name: dvc-gs
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep gs
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - gcsfs >=2021.11.1
-
-  - name: dvc-gdrive
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep gdrive
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - pydrive2 >=1.14.0
-
-  - name: dvc-s3
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep s3
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - s3fs >=2021.11.1
-        - boto3 >=1.9.201
-
-  - name: dvc-azure
-    test:
-      requires:
-        - git
-        - pip
-        - portalocker >=1.6,<2.0  # Temporary; see discussion around <https://github.com/conda-forge/dvc-feedstock/pull/234#issuecomment-907311619>
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep azure
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - adlfs >=2021.10.0
-        - azure-identity >=1.4.0
-        - knack
-
-  - name: dvc-oss
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep oss
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - ossfs >=2021.8.0
-
-  - name: dvc-ssh
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep ssh
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - sshfs >=2021.11.2
-
-  - name: dvc-hdfs
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep hdfs
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - pyarrow >=1
-
-  - name: dvc-webdav
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep webdav
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
-        - webdav4 >=0.9.3
-
-# NOTE: webhdfs support is baked into the main package.
-# Keeping this one for backward compatibility.
-  - name: dvc-webhdfs
-    test:
-      requires:
-        - git
-        - pip
-      imports:
-        - dvc
-      commands:
-        - pip check
-        - dvc version
-        - dvc version | grep webhdfs
-    requirements:
-      host:
-        - python
-      run:
-        - python
-        - {{ pin_subpackage("dvc", exact=True) }}
 
 about:
   home: https://dvc.org/
