--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,8 +65,8 @@ requirements:
     - scmrepo ==0.1.1
     - dvc-render ==0.0.11
     - dvclive >=0.10.0
-    - dvc-data ==0.10.0
-    - dvc-http ==2.19.1
+    - dvc-data ==0.13.0
+    - dvc-http ==2.27.2
     - dvc-task ==0.1.2
     - hydra-core >=1.1.0
     - iterative-telemetry ==0.0.5
@@ -104,3 +104,4 @@ extra:
     - shcheklein
     - efiop
     - skshetry
+    - pmrowla
