--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -8,4 +8,5 @@ bot:
   automerge: true
   inspection: update-grayskull
 conda_build:
-  pkg_format: '2'
+  pkg_format: "2"
+conda_build_tool: rattler-build
