Add setuptools as host dependency

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -27,6 +27,7 @@ requirements:
   host:
     - pip
     - python ${{ python_min }}.*
+    - setuptools
     - setuptools_scm >=7
   run:
     - flatten_dict <1,>=0.4.1
